# CPE393-Comp

./: .gitignore  KaggleOlympiad.ipynb  KaggleOlympiad.py  README.md  hello.py  lefthook.yml  pyproject.toml
KaggleData/: data.xlsx  test.csv  train.csv
